need to compose a list now

--- a/extension/options.html
+++ b/extension/options.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Settings - Shinigami Eyes</title>
+    <title>Settings - Jeffrey Associates</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="help.css" rel="stylesheet">
     <link href="content.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 
         <section class="section-top">
             <div class="section-inner">
-                <h2>Shinigami Eyes settings</h2>
+                <h2>Jeffrey Associates settings</h2>
             </div>
         </section>
 
@@ -85,7 +85,6 @@
 
 
         <section class="section-footer">
-            <a href="https://shinigami-eyes.github.io/privacy-policy" target="_blank">Privacy</a>
         </section>
 
     </div>
